<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SNSReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title_renren">人人网</string>
    <string name="login_title_sina">新浪微博</string>
    <string name="login_title_tencent">腾讯微博</string>
    <string name="login_title_wechat">微信</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册新用户</string>
    <string name="login_copyright">by FrabornaChen</string>
    <string name="main_headimage">头像</string>
    <string name="main_nickname">昵称</string>
    <string name="main_setting">设置</string>
    <string name="main_news">新鲜事</string>
    <string name="main_put">发布</string>
    <string name="main_homepage">主页</string>
    <string name="tweets_body_headimage">头像</string>
    <string name="tweets_body_zan">点赞</string>
    <string name="tweets_body_comment">评论</string>
    <string name="tweets_body_forward">转发</string>
    <string name="top_panel_icon">SNSReader</string>
    <string name="top_panel_username">用户名</string>
    <string name="top_panel_setting">设置</string>
    <string name="comments_hint">评论：</string>
    <string name="sns_renren">人人</string>
    <string name="sns_sinaweibo">新浪</string>
    <string name="sns_tencentweibo">腾讯</string>
    <string name="sns_weixin">朋友圈</string>
    <string name="title_activity_tweet">鲜货</string>
    <string name="title_activity_notice">消息</string>
    <string name="vertical_divider">垂直分割线</string>
    <string name="horizontal_divider">水平分割线</string>
    <string name="homepage_viewers_num">0人来访</string>
    <string name="homepage_tweets_num">0条状态</string>
    <string name="homepage_friends_num">0位好友</string>
    <string name="bind_renren">人人</string>
    <string name="bind_sina">新浪微博</string>
    <string name="bind_tencent">腾讯微博</string>
    <string name="bind_wechat">微信</string>
    <string name="setting">账号设置</string>
    <string name="say_something">说点神马吧</string>
    <string name="publish_onekey">一键发布</string>
    <string name="bind">绑定账号</string>
    <string name="unbind">解除绑定</string>

</resources>