<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/setting_padding"
    android:layout_marginRight="@dimen/setting_padding"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/publish_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/publish_edittext"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/publish_sns_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publish_text"
        android:layout_marginBottom="@dimen/setting_padding"
        android:layout_marginTop="@dimen/setting_padding"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/publish_renren"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_title_renren" />

        <CheckBox
            android:id="@+id/publish_sina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sns_sinaweibo" />

        <CheckBox
            android:id="@+id/publish_tencent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sns_tencentweibo" />
    </LinearLayout>

    <Button
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publish_sns_linear"
        android:text="@string/publish_onekey" />

</RelativeLayout>