<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/setting_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/setting_padding"
        android:paddingTop="@dimen/setting_padding"
        android:text="@string/setting"
        android:textSize="@dimen/setting_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_description"
        android:layout_marginLeft="@dimen/setting_padding"
        android:layout_marginRight="@dimen/setting_padding"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/bind_account_renren_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bind_account_renren_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/bind_renren"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />

            <Button
                android:id="@+id/bind_account_renren_unbind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/unbind"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />

            <Button
                android:id="@+id/bind_account_renren_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/bind_account_renren_unbind"
                android:text="@string/bind"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bind_account_sina_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bind_account_sina_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/bind_sina"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />

            <Button
                android:id="@+id/bind_account_sina_unbind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/unbind"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />

            <Button
                android:id="@+id/bind_account_sina_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/bind_account_sina_unbind"
                android:text="@string/bind"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bind_account_tencent_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bind_account_tencent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/bind_tencent"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />

            <Button
                android:id="@+id/bind_account_tencent_unbind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/unbind"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />

            <Button
                android:id="@+id/bind_account_tencent_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/bind_account_tencent_unbind"
                android:text="@string/bind"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/tweets_content_textsize" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>